--- a/01 Docker&Kubernetes/0/01.md
+++ b/01 Docker&Kubernetes/0/01.md
@@ -1,30 +1,18 @@
 **Overview**  
-`docker-compose` (hyphenated) and `docker compose` (space-separated) both manage multi-container Docker apps, but they
-represent different versions with distinct implementations. The hyphenated form is the legacy standalone tool, while the
-spaced form is the modern integrated CLI subcommand. [iifx](https://iifx.dev/en/articles/375567004)
+`docker-compose` (hyphenated) and `docker compose` (space-separated) both manage multi-container Docker apps, but they represent different versions with distinct implementations. The hyphenated form is the legacy standalone tool, while the spaced form is the modern integrated CLI subcommand. [iifx](https://iifx.dev/en/articles/375567004)
 
-**Key Versions**
-
-- `docker-compose` is Docker Compose V1, released in 2014 and Python-based; it's now deprecated and requires separate
-  installation. [dev](https://dev.to/ajeetraina/comment/2fh86)
-- `docker compose` is V2 (since 2020), rewritten in Go, and built into the Docker CLI like `docker build` or `docker run`.
-  [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826)
+**Key Versions**  
+- `docker-compose` is Docker Compose V1, released in 2014 and Python-based; it's now deprecated and requires separate installation. [dev](https://dev.to/ajeetraina/comment/2fh86)
+- `docker compose` is V2 (since 2020), rewritten in Go, and built into the Docker CLI like `docker build` or `docker run`. [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826)
 
 **Command Differences**  
-| Aspect | `docker-compose` (V1) | `docker compose` (V2) | |--------|-----------------------|-----------------------| |
-Syntax | Standalone binary: `docker-compose up` [iifx](https://iifx.dev/en/articles/375567004) | CLI plugin:
-`docker compose up` [iifx](https://iifx.dev/en/articles/375567004) | | File Names | Often `docker-compose.yml`
-[iifx](https://iifx.dev/en/articles/375567004) | Prefers `compose.yaml` or `compose.yml`
-[iifx](https://iifx.dev/en/articles/375567004) | | Project Naming | Appends "\_" (e.g., `myproj_web`)
-[stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
-Appends "-" (e.g., `myproj-web`)
-[stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
-| `.env` Handling | Reads from instance dir
-[stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
-Reads from template dir
-[stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
+| Aspect | `docker-compose` (V1) | `docker compose` (V2) |
+|--------|-----------------------|-----------------------|
+| Syntax | Standalone binary: `docker-compose up`  [iifx](https://iifx.dev/en/articles/375567004) | CLI plugin: `docker compose up`  [iifx](https://iifx.dev/en/articles/375567004) |
+| File Names | Often `docker-compose.yml`  [iifx](https://iifx.dev/en/articles/375567004) | Prefers `compose.yaml` or `compose.yml`  [iifx](https://iifx.dev/en/articles/375567004) |
+| Project Naming | Appends "_" (e.g., `myproj_web`)  [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) | Appends "-" (e.g., `myproj-web`)  [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
+| `.env` Handling | Reads from instance dir  [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) | Reads from template dir  [stackoverflow](https://stackoverflow.com/questions/66514436/difference-between-docker-compose-and-docker-compose/66516826) |
 
 **Features and Support**  
-V2 offers better performance, Swarm/K8s integration, `watch` mode for dev reloads, and ongoing updates; use it for new
-projects. V1 lacks these and may cause compatibility issues with modern Docker. Docker recommends migrating to V2 via
-`docker compose`. [codegenes](https://www.codegenes.net/blog/difference-between-docker-compose-and-docker-compose/)
+V2 offers better performance, Swarm/K8s integration, `watch` mode for dev reloads, and ongoing updates; use it for new projects. V1 lacks these and may cause compatibility issues with modern Docker. Docker recommends migrating to V2 via `docker compose`. [codegenes](https://www.codegenes.net/blog/difference-between-docker-compose-and-docker-compose/)
+
